[package]
name = "meteora-sdk"
version = "0.6.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "meteora sdk"
keywords = ["trade", "crypto", "finance", "solana", "meteora"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/meteora-sdk"

[dependencies]
solana-network-sdk = "0.2.2"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
solana-commitment-config = "3.0.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
solana-account-decoder = "3.0.0"
solana-transaction = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
chrono = "0.4.42"
spl-math = "0.3.0"
borsh = "1.5.7"
rand = "0.9.2"
spl-token-interface = "2.0.0"
log = "0.4.28"
